# hitchcock

./: .env.example  .gitignore  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml
scripts/: runway_seedance_runner.py
src/hitchcock/: __init__.py  cli.py  config.py
src/hitchcock/agents/: __init__.py  brief.py  cast.py  design.py  location.py  post.py  scene_art.py  script.py  shot_gen.py  storyboard.py  style.py  tts.py
src/hitchcock/image/: __init__.py  ark.py  gpt_image.py  nanobanana.py
src/hitchcock/llm/: __init__.py  gemini_text.py  mimo.py
src/hitchcock/video/: __init__.py  seedance.py
